# cpp-meetup

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  benchmark.sh
benchmark/: CMakeLists.txt  arduinojson-evhtp.cpp  arduinojson-httpp.cpp  empty-httpp.cpp  evhtp_util.h  gason-evhtp.cpp  jsoncpp-evhtp.cpp  jsoncpp-httpp.cpp  parse_env.h  protog-evhtp.cpp  rapidjson-evhtp.cpp  rapidjson-httpp.cpp
benchmark/empty/: CMakeLists.txt
benchmark/empty-evhtp/: CMakeLists.txt  main.cpp
benchmark/empty-httpp/: CMakeLists.txt
benchmark/gason-evhtp/: CMakeLists.txt
benchmark/gason-httpp/: CMakeLists.txt  main.cpp
benchmark/jsoncpp/: CMakeLists.txt
benchmark/jsoncpp-evhtp/: CMakeLists.txt
benchmark/jsoncpp-httpp/: CMakeLists.txt
benchmark/pbjson/: CMakeLists.txt
benchmark/pbjson-evhtp/: CMakeLists.txt  main.cpp
benchmark/pbjson-httpp/: CMakeLists.txt  main.cpp
benchmark/protog/: CMakeLists.txt  main.cpp
benchmark/protog-evhtp/: CMakeLists.txt
benchmark/protog-httpp/: CMakeLists.txt  main.cpp
benchmark/rapidjson/: CMakeLists.txt  main.cpp
benchmark/rapidjson-evhtp/: CMakeLists.txt  main.cpp
benchmark/rapidjson-httpp/: CMakeLists.txt
cmake/: CompilerFlags.cmake  Dependencies.cmake  FindHWLOC.cmake  Prerequisites.cmake
demo/: CMakeLists.txt  demo0.cpp  demo1.cpp  demo2.cpp  demo3.cpp
share/: bidrequest.1.json  bidrequest.2.json  openrtb-schema_bid-request_v2-3.json  post.lua  post_128.lua  post_800.lua
tools/empty/: main.cpp
tools/empty2/: CMakeLists.txt  main.cpp
tools/gason/: CMakeLists.txt
tools/jsoncpp/: main.cpp
tools/nodejs/: package.json  server.js
tools/protog/: CMakeLists.txt  main.cpp
tools/protog2/: CMakeLists.txt  main.cpp
tools/rapidjson/: main.cpp
