include_directories(${CMAKE_SOURCE_DIR}/benchmark/include/)

add_subdirectory(empty-evhtp/)
add_subdirectory(empty-httpp/)
add_subdirectory(gason-evhtp/)
add_subdirectory(gason-httpp/)
add_subdirectory(jsoncpp-evhtp/)
add_subdirectory(jsoncpp-httpp/)
add_subdirectory(pbjson-evhtp/)
add_subdirectory(pbjson-httpp/)
add_subdirectory(protog-evhtp/)
add_subdirectory(protog-httpp/)
add_subdirectory(rapidjson-evhtp/)
add_subdirectory(rapidjson-httpp/)
